[metadata]
name = wcdimportbot
version = attr: wcdimportbot.__version__
description = WikiCitations Import Bot
long_description = file: README.rst
keywords = WikiCitations
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    wcdimportbot = wcdimportbot:main